objects/GenAIGtwyRequestMetadata__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadataType__c</fullName>
        <label>Metadata Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>Metadata</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303775913_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGtwyRequestMetadata_parent_map__rel</label>
        <referenceTo>GenAIGatewayRequest__dlm</referenceTo>
        <relationshipLabel>GenAIGtwyRequestMetadata_parent_map__rel</relationshipLabel>
        <relationshipName>rel_1753303775913_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>